exports[`StopwatchModeToggleButton renders an active component when the clock is in stopwatch mode 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "background": "transparent",
      "border": 0,
      "color": "var(--Concrete)",
      "cursor": "pointer",
      "fontSize": "2rem",
      "height": 50,
      "lineHeight": 1,
      "minWidth": 50,
      "padding": 0,
    }
  }>
  <svg
    fill="currentColor"
    height="1em"
    preserveAspectRatio="xMidYMid meet"
    style={
      Object {
        "color": undefined,
        "verticalAlign": "top",
      }
    }
    viewBox="0 0 40 40"
    width="1em">
    <g>
      <path
        d="m20.9 11.6v8.8l7.5 4.4-1.3 2.2-8.7-5.4v-10h2.5z m-0.9 21.8c7.3 0 13.4-6.1 13.4-13.4s-6.1-13.4-13.4-13.4-13.4 6.1-13.4 13.4 6.1 13.4 13.4 13.4z m0-30c9.2 0 16.6 7.4 16.6 16.6s-7.4 16.6-16.6 16.6-16.6-7.4-16.6-16.6 7.4-16.6 16.6-16.6z" />
    </g>
  </svg>
  <br />
  <div
    style={
      Object {
        "color": "var(--Concrete)",
        "fontFamily": "Roboto Mono, monospace",
        "fontSize": ".8rem",
        "lineHeight": 1.5,
        "textTransform": "uppercase",
      }
    }>
    Stopwatch
  </div>
</button>
`;

exports[`StopwatchModeToggleButton renders the component 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "background": "transparent",
      "border": 0,
      "color": "var(--Silver)",
      "cursor": "pointer",
      "fontSize": "2rem",
      "height": 50,
      "lineHeight": 1,
      "minWidth": 50,
      "padding": 0,
    }
  }>
  <svg
    fill="currentColor"
    height="1em"
    preserveAspectRatio="xMidYMid meet"
    style={
      Object {
        "color": undefined,
        "verticalAlign": "top",
      }
    }
    viewBox="0 0 40 40"
    width="1em">
    <g>
      <path
        d="m20.9 11.6v8.8l7.5 4.4-1.3 2.2-8.7-5.4v-10h2.5z m-0.9 21.8c7.3 0 13.4-6.1 13.4-13.4s-6.1-13.4-13.4-13.4-13.4 6.1-13.4 13.4 6.1 13.4 13.4 13.4z m0-30c9.2 0 16.6 7.4 16.6 16.6s-7.4 16.6-16.6 16.6-16.6-7.4-16.6-16.6 7.4-16.6 16.6-16.6z" />
    </g>
  </svg>
  <br />
  <div
    style={
      Object {
        "color": "var(--Silver)",
        "fontFamily": "Roboto Mono, monospace",
        "fontSize": ".8rem",
        "lineHeight": 1.5,
        "textTransform": "uppercase",
      }
    }>
    Stopwatch
  </div>
</button>
`;
